fix: adjust padding on divs when collapsed

--- a/src/app/styles/adminStyle/sidebar.module.css
+++ b/src/app/styles/adminStyle/sidebar.module.css
@@ -1,16 +1,25 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 225px;
     height: 100vh;
     text-align: center;
     transition: width 0.3s;
-    box-shadow: 5px 0 5px rgba(0, 0, 0, 0.1); /* Subtle border with smaller spread radius and alpha transparency */
-
+    box-shadow: 5px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .collapsedSidebar {
     width: 50px;
+    margin: 1px;
+    padding: 0px; 
+}
+
+.collapsedSidebar .option {
+    padding: 0px;
+}
+
+.collapsedSidebar .option p{
+    padding-left: 0px;
 }
 
 .sidebar h1 {
@@ -24,7 +33,6 @@
 
 .adminOptions li {
     list-style: none;
-    margin: 10px;
 }
 
 .adminOptions ul li a{
@@ -36,13 +44,45 @@
 .adminOptions p {
     font-size: 2vh;
     text-align: center;
+    padding-top: 7px;
+    padding-left: 5px;
 }
 
 .option {
+    font-size: 1.7vh;
+    padding: 10px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 25px 10px 25px;
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: row;
-    text-align: center;
+    transition: color 0.3s; /* Add color transition */
 }
+  
+  .option::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black; 
+    z-index: -1;
+    transform: scaleY(0);
+    transform-origin: 0 0; 
+    transition: transform 0.5s cubic-bezier(0.5, 1.6, 0.4, 0.7);
+    border-radius: 10px;
+  }
+  
+  .option:hover::before {
+    transform: scaleY(1);
+  }
+  
+  .option:hover {
+    color: white; 
+  }
 
 .toggleButton {
     cursor: pointer;
